# audiovec

./: .gitignore  Dockerfile  README.md  app.py  compare_architectures.py  deploy_pipeline.py  pyproject.toml  report.md  requirements.txt  train_crnn.py  vercel.json  verify_page.py
audiovec/: __init__.py  config.py  data.py  export_onnx.py  model.py  predict.py  search.py  sliding.py  train.py  visualize.py
examples/nodejs/: README.md  melspectrogram.js  package.json  predict.js
models/: audiovec_model.pt  cnn.pt  comparison_history.json  crnn-transformer.onnx.data  crnn-transformer.pt  ravdess_embeddings.npy  ravdess_metadata.json
tests/: conftest.py  test_config.py  test_data.py  test_model.py  test_predict.py  test_search.py  test_sliding.py
web/: .env.example  .gitignore  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
web/.next/: trace
web/.next/server/: server-reference-manifest.json  webpack-runtime.js
web/.next/server/app/: page.js  page_client-reference-manifest.js
web/.next/server/vendor-chunks/: @swc.js  next.js  wav-decoder.js
web/.next/static/chunks/: app-pages-internals.js  webpack.js
web/.next/types/app/: layout.ts  page.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/monitoring/: page.tsx
web/lib/: audio-utils.ts  emotions.ts  inference.ts  langfuse.ts  melspectrogram.ts  model-version.ts  wav-encoder.ts
web/lib/__tests__/: inference.test.ts
web/models/: crnn-transformer.onnx
web/types/: wav-decoder.d.ts
(+9 files in other folders)
