[project]
name = "audiovec"
version = "0.1.0"
description = "Audio emotion embedding into 256-dimensional space via mel-spectrograms & CNN (PyTorch)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "librosa>=0.10",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "plotly>=5.15",
    "tqdm>=4.65",
    "kaleido>=0.2", # required by plotly for static image export
    "streamlit>=1.28", # frontend UI
    "onnxruntime>=1.15,<1.19",
    "onnxscript>=0.7.0",
]

[tool.uv]
package = true


[project.scripts]
audiovec = "main:main"

[tool.setuptools.packages.find]
include = ["audiovec*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
